--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="1;URL='http://thejordanprice.com'" />
+<meta http-equiv="refresh" content="1;URL='https://github.com/thejordanprice'" />
 </head>
 <body>
 <a href='http://thejordanprice.com'>Click here if it doesn't work...</a>
