--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
 <meta http-equiv="refresh" content="1;URL='https://github.com/thejordanprice'" />
 </head>
 <body>
-<a href='http://thejordanprice.com'>Click here if it doesn't work...</a>
+<a href='https://github.com/thejordanprice'>Click here if it doesn't work...</a>
 </body>
